# 4mNonSelfSim_UGUCA

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  local_cmake_twice.sh  make_twice.sh
benchmarks/: plotting_utils.py
benchmarks/BP1-FD/: BP1-FD.cc  CMakeLists.txt  README.md  inspect_results.py
benchmarks/BP1-QD/: BP1-QD.cc  BP1-QD.sh  CMakeLists.txt  generate_output.py  inspect_results.py
benchmarks/TPV101/: CMakeLists.txt  TPV101.cc  generate_output.py  inspect_results.py  result_summary.py
benchmarks/TPV102/: CMakeLists.txt  TPV102.cc  generate_output.py  inspect_results.py
benchmarks/TPV103/: CMakeLists.txt  TPV103.cc  generate_output.py  inspect_results.py
benchmarks/TPV104/: CMakeLists.txt  TPV104.cc  generate_output.py  inspect_results.py
benchmarks/TPV205/: TPV205-2D.cc  TPV205.cc  inspect_results.py
example_4mNonSelfSim/: CMakeLists.txt  plot_example_animation.py  run_rupgougepatch_casestudy.sh  rupture_gougepatch_linear_coulomb_friction_law_selfhealing_Gaussnuc.cc
examples/: CMakeLists.txt  basic_example.cc  basic_example_plot.py  fracture_2d_example.cc  fracture_2d_example.in  fracture_2d_example.restart.in  fracture_2d_example.restart.sh  fracture_2d_example.steps.in  fracture_2d_example_plot.py  fracture_2d_example_plot.restart.py  fracture_3d_example.cc  fracture_3d_example.in  fracture_3d_example_plot.py  friction_2d_example.cc  friction_2d_example.in  friction_2d_example_plot.py
kernels/: README.md  compute_kernel_nu0.246.sh  laplace_inverse.py  nu0.246_h11.txt  nu0.24_h00.txt  nu0.24_h01.txt  nu0.33_h00.txt  nu0.34_h00.txt  nu0.34_h01.txt  nu0.34_h11.txt  nu0.39_h00.txt  nu0.39_h01.txt  nu0.39_h11.txt  nu0.45_h00.txt  nu0.45_h01.txt  nu0.45_h11.txt  nu0.47_h00.txt  nu0.47_h01.txt  nu0.47_h11.txt  nu0.49_h00.txt  nu0.49_h01.txt  nu0.49_h11.txt  nu0.49_pstress_h00.txt  nu0.49_pstress_h01.txt  nu0.49_pstress_h11.txt  run_test_kernel.sh
python/: CMakeLists.txt  README.md  cast.hh  generate_stubs.py  half_space.cpp  interface.cpp  io.cpp  mesh.cpp  numpy.hh  pyproject.toml  uguca_module.cpp  wrap.hh
python/src/: cast.hh  half_space.cpp  interface.cpp  io.cpp  mesh.cpp  numpy.hh  uguca.cpp  wrap.hh
python/uguca/: __init__.py
python/uguca/puguca/: __init__.pyi  half_space.pyi  interface.pyi  io.pyi  mesh.pyi
simulations_main_casestudy_hpc_paramsearch/: CMakeLists.txt
src/: CMakeLists.txt  fftable_nodal_field.cc  fftable_nodal_field_component.hh  half_space.hh  half_space_dynamic.hh  half_space_quasi_dynamic.hh  interface_law.hh  nodal_field.hh  static_communicator_mpi.cc  static_communicator_mpi.hh  uca_base_mesh.cc  uca_common.hh  uca_custom_mesh.hh  uca_distributed_fftable_mesh.cc  uca_distributed_fftable_mesh.hh  uca_dumper.hh  uca_simple_mesh.cc
src/half_space/: convolutions.cc  convolutions.hh  half_space.cc  half_space.hh  half_space_adaptive.cc  half_space_adaptive.hh  half_space_dynamic.cc  half_space_dynamic.hh  half_space_quasi_dynamic.cc  half_space_quasi_dynamic.hh  kernel.hh  kernel_collection.hh  limited_history.cc  limited_history.hh  material.cc  material.hh  modal_limited_history.cc  modal_limited_history.hh  precomputed_kernel.cc  precomputed_kernel.hh  preint_kernel.cc  preint_kernel.hh  preint_kernel_collection.cc  preint_kernel_collection.hh
src/interface/: bimat_interface.cc  bimat_interface.hh  defrig_interface.cc  defrig_interface.hh  interface.cc  interface.hh  unimat_normal_interface.cc  unimat_normal_interface.hh  unimat_shear_interface.cc  unimat_shear_interface.hh
src/interface/infinite_boundary/: infinite_boundary.cc  infinite_boundary.hh
src/interface/laws/: barras_law.cc  barras_law.hh  continuous_shear_weakening_law.cc  continuous_shear_weakening_law.hh  fracture_law.cc  fracture_law.hh  interface_law.cc  interface_law.hh  linear_coulomb_friction_law.cc  linear_coulomb_friction_law.hh  linear_coulomb_friction_law_selfhealing.cc  linear_coulomb_friction_law_selfhealing.hh  linear_normal_cohesive_law.cc  linear_normal_cohesive_law.hh  linear_shear_cohesive_law.cc  linear_shear_cohesive_law.hh  rate_and_state_law.cc  rate_and_state_law.hh
src/interface_laws/: barras_law.cc  linear_coulomb_friction_law.cc  rate_and_state_law.cc  rate_and_state_law.hh
src/io/: uca_base_io.cc  uca_base_io.hh  uca_dumper.cc  uca_dumper.hh  uca_input_section.cc  uca_input_section.hh  uca_parameter_reader.cc  uca_parameter_reader.hh  uca_restart.cc  uca_restart.hh
src/mesh/: fftable_nodal_field.cc  fftable_nodal_field.hh  fftable_nodal_field_component.cc  hist_fftable_nodal_field.cc  hist_fftable_nodal_field.hh  modal_limited_history.cc  modal_limited_history.hh  nodal_field.cc  nodal_field.hh  nodal_field_component.cc  nodal_field_component.hh  uca_base_mesh.cc  uca_base_mesh.hh  uca_custom_mesh.cc  uca_custom_mesh.hh  uca_distributed_fftable_mesh.cc  uca_distributed_fftable_mesh.hh  uca_fftable_mesh.cc  uca_fftable_mesh.hh  uca_simple_mesh.cc  uca_simple_mesh.hh
src/src/: uca_config.hh
test/: CMakeLists.txt  test_barras_law.cc  test_bimat_interface.cc  test_custom_mesh.cc  test_custom_mesh.mpi.sh  test_defrig_interface.cc  test_distributed_fftable_mesh.cc  test_distributed_fftable_mesh.mpi.sh  test_dumper.cc  test_fftable_mesh.cc  test_fftable_nodal_field.cc  test_fftable_nodal_field_component.cc  test_fftable_nodal_field_component.mpi.sh  test_half_space_dynamic.cc  test_half_space_dynamic.mpi.sh  test_half_space_quasi_dynamic.cc  test_infinite_boundary.cc  test_input_section.cc  test_interface.cc  test_kernel_collection.cc  test_limited_history.cc  test_linear_coulomb_friction_law.cc  test_linear_coulomb_friction_law_selfhealing.cc  test_linear_normal_cohesive_law.cc  test_linear_shear_cohesive_law.cc  test_material.cc  test_mesh.cc  test_modal_limited_history.cc  test_nodal_field.cc  test_nodal_field_component.cc  test_parameter_reader.cc  test_parameter_reader.txt  test_precomputed_kernel.cc  test_preint_kernel.cc  test_rate_and_state_law.cc  test_restart.cc  test_restart.sh  test_simple_mesh.cc  test_simple_mesh.mpi.sh  test_static_communicator_mpi.cc  (+2 more)
tools/: headers_update.py
(+35 files in other folders)
